--- a/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
+++ b/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
@@ -1,4 +1,8 @@
-<app-navbar [isHidden]="true"></app-navbar>
+<app-navbar
+  (IsNightmode)="changetheme($event)"
+  (IsFullscreen)="fullscreenstatus($event)"
+  [isHidden]="true"
+></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.shopx_cart'"></app-jumbotron>
 <!-- <div class="container mb-4">
     <div class="row">
@@ -115,7 +119,7 @@
 ></app-spinner>
 <div class="table-wrapper" [ngClass]="{dimmed: dimmed}">
   <mat-table
-    [ngStyle]="{height: height+'px'}"
+    [ngStyle]="{'max-height': height+'px'}"
     [dataSource]="dataSource"
     matSort
     class="box-elevation-z8"
@@ -225,7 +229,7 @@
       </mat-cell>
     </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns ;sticky: true"></mat-header-row>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
   <br />
