--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -27,6 +27,7 @@
   class="profile-container"
   [ngClass]="{dimmed: dimmed}"
   fxLayout="row"
+  [ngStyle]="{'padding-top': padding +'px'}"
   fxLayoutAlign="start center"
   fxLayoutGap="20px"
 >
