--- a/src/app/features/user-management/profile/profile.component.html
+++ b/src/app/features/user-management/profile/profile.component.html
@@ -1,16 +1,21 @@
-<app-navbar [isHidden]="true"></app-navbar>
+<app-navbar
+  (IsNightmode)="changetheme($event)"
+  (IsFullscreen)="fullscreenstatus($event)"
+  [isHidden]="true"
+></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.your_account'"></app-jumbotron>
 <mat-tab-group [selectedIndex]="selectedIndex" (selectedTabChange)="tabChanged($event)">
   <mat-tab label="{{'user.form_heading.profile' | translate}}">
-    <app-view-profile></app-view-profile
+    <app-view-profile [paddingtop]="paddingtopp"></app-view-profile
   ></mat-tab>
   <mat-tab label="{{'user.form_heading.edit_profile' | translate}}"
     ><app-edit-profile
+      [paddingtop]="paddingtopp"
       [selectedIndex]="selectedIndex"
       (selectedIndexx)="getselectedIndex($event)"
     ></app-edit-profile>
   </mat-tab>
   <mat-tab label="{{'user.form_heading.to_buy_list' | translate}}">
-    <app-buy-list></app-buy-list>
+    <app-buy-list [paddingtop]="paddingtoppp"></app-buy-list>
   </mat-tab>
 </mat-tab-group>
