--- a/src/app/layout/homepage/homepage.component.html
+++ b/src/app/layout/homepage/homepage.component.html
@@ -1,6 +1,10 @@
 <app-loading-bar></app-loading-bar>
 <div class="c-wrapper" dynamicTheme>
-  <app-navbar [siteLeftPanel]="siteLeftPanel"></app-navbar>
+  <app-navbar
+    (IsNightmode)="changetheme($event)"
+    (IsFullscreen)="fullscreenstatus($event)"
+    [siteLeftPanel]="siteLeftPanel"
+  ></app-navbar>
   <mat-sidenav-container class="sidenav-container" [hasBackdrop]="false">
     <mat-sidenav class="c-site-left-panel" #siteLeftPanel mode="side" opened>
       <app-left-panel-container [menuItems]="menuItems"></app-left-panel-container>
