--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -3,7 +3,8 @@
   [ngStyle]="{'padding-top': padding +'px'}"
   fxLayout="row"
   fxLayoutAlign="start center"
->  <div fxFlex="40%">
+>
+  <div fxFlex="40%">
     <mat-card class="profile-image-card">
       <mat-card-header>
         <mat-card-title>{{"user.form.profile_pic" | translate}}</mat-card-title>
