--- a/src/app/features/admin-management/user-components/block-user/block-user.component.html
+++ b/src/app/features/admin-management/user-components/block-user/block-user.component.html
@@ -1,5 +1,5 @@
 <app-jumbotron [Heading]="'admin.main_heading.block_user'"></app-jumbotron>
-<div class="big-input-container">
+<div class="big-input-container"  [ngStyle]="{'min-height': heightt +'px'}">
   <div class="big-delete-input">
     <app-big-input
       [placeholder]="'admin.productform.enter_the_userid'"
