--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -1,6 +1,6 @@
 <div
   class="profile-container"
-  [ngStyle]="{'padding-top': padding +'px'}"
+  [ngStyle]="{'padding-top': (paddingtop | async)  +'px'}"
   fxLayout="row"
   fxLayoutAlign="start center"
 >
