--- a/src/app/features/cart-management/checkout/checkout.component.html
+++ b/src/app/features/cart-management/checkout/checkout.component.html
@@ -1,17 +1,21 @@
-<app-navbar [isHidden]="true"></app-navbar>
+<app-navbar
+  (IsNightmode)="changetheme($event)"
+  (IsFullscreen)="fullscreenstatus($event)"
+  [isHidden]="true"
+></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.checkout_form'"></app-jumbotron>
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
   <mat-step>
     <ng-template matStepLabel>
       {{"user.form_heading.fill_out_your_billing_address" | translate}}
     </ng-template>
-    <app-billing (step1status)="setstep1status($event)"></app-billing>
+    <app-billing [paddingtop]="paddingtopp" (step1status)="setstep1status($event)"></app-billing>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>
       {{"user.form_heading.fill_out_your_address" | translate}}
     </ng-template>
-    <app-payment (step2status)="setstep2status($event)"></app-payment>
+    <app-payment [paddingtop]="paddingtopp" (step2status)="setstep2status($event)"></app-payment>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>
