--- a/src/app/features/user-management/profile/buy-list/buy-list.component.html
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.html
@@ -1,4 +1,7 @@
-<div class="big-input-container" [ngStyle]="{'padding-top': padding +'px'}">
+<div
+  class="big-input-container"
+  [ngStyle]="{'padding-top': ((paddingtop | async) >0 ?((paddingtop | async)-35) :0)  +'px'}"
+>
   <div class="big-delete-input">
     <app-big-input
       [placeholder]="'user.form_heading.i_am_going_to_buy_a'"
