--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -416,6 +416,8 @@
       box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
         0 3px 14px 2px rgba(0, 0, 0, 0.12);
       transition-duration: 500ms;
+      // transform: scale(1.008);
+      // transition: ease-in;
     }
     .table-full-width {
       width: 100%;
