--- a/src/app/features/cart-management/checkout/checkout.component.html
+++ b/src/app/features/cart-management/checkout/checkout.component.html
@@ -9,13 +9,13 @@
     <ng-template matStepLabel>
       {{"user.form_heading.fill_out_your_billing_address" | translate}}
     </ng-template>
-    <app-billing [paddingtop]="paddingtopp" (step1status)="setstep1status($event)"></app-billing>
+    <app-billing [paddingtop]="paddingtop" (step1status)="setstep1status($event)"></app-billing>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>
       {{"user.form_heading.fill_out_your_address" | translate}}
     </ng-template>
-    <app-payment [paddingtop]="paddingtopp" (step2status)="setstep2status($event)"></app-payment>
+    <app-payment [paddingtop]="paddingtop" (step2status)="setstep2status($event)"></app-payment>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>
