--- a/src/app/features/cart-management/checkout/payment/payment.component.html
+++ b/src/app/features/cart-management/checkout/payment/payment.component.html
@@ -1,6 +1,6 @@
 <div
   class="payment-container"
-  [ngStyle]="{'padding-top': padding +'px'}"
+  [ngStyle]="{'padding-top': (paddingtop | async) +'px'}"
   fxLayout="row"
   fxLayoutAlign="start center"
 >
