--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,8 +1,10 @@
-@import '../../../assets/css/variable.scss';
+@import '../../../assets/css/var.scss';
 
 .nav-bar {
   z-index: 1000;
   top: 0;
+  background-color: $darkblue;
+  color: $white;
   position: sticky !important;
   box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14),
     0px 1px 18px 0px rgba(0, 0, 0, 0.12);
@@ -13,6 +15,7 @@
     height: 60px;
     width: 60px;
     background: transparent;
+    color: $white;
     border-radius: 0;
     position: absolute;
     left: 0;
@@ -47,4 +50,11 @@
   .example-spacer {
     flex: 1 1 auto;
   }
+  .navbar-buttons {
+    .mat-raised-button {
+      color: $lighterblack;
+      background-color: $white;
+    }
+  }
 }
+
