--- a/src/app/layout/homepage/page-content/category-tiles/category-tiles.component.scss
+++ b/src/app/layout/homepage/page-content/category-tiles/category-tiles.component.scss
@@ -1,3 +1,4 @@
+@import '../../../../../assets/css/var.scss';
 .wrap {
   height: 50%;
   padding: 10px 80px 0px 80px;
@@ -7,7 +8,7 @@
       // border: 1px solid #d8d8d8;
       border-radius: 10px;
       padding: 25px;
-      background-color: #e8eaec;
+      background-color: $lightestgrey;
       min-height: 100%;
       &:hover {
         background-color: #fff;
