--- a/src/app/shared/list-products/list-products.component.scss
+++ b/src/app/shared/list-products/list-products.component.scss
@@ -22,11 +22,12 @@
         position: relative;
         min-height: 1px;
         padding-right: 15px;
-        padding-left: 15px;
+        padding-left: 30px;
         float: left;
         width: 25%;
       }
       .product-card {
+        max-width: 260px;
         border-radius: 10px;
         // box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.4);
         box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
@@ -73,7 +74,10 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          margin-left: 0;
           .mat-raised-button {
+            display: flex;
+            justify-content: center;
             line-height: 30px !important;
           }
         }
