--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -44,7 +44,8 @@
   }
 }
 //--------------------------- Scroll Button ------------------------------
-.c-go-to-top {
+.c-go-top {
+  background-color: #f44336;
   position: fixed !important;
   cursor: pointer !important;
   box-shadow: 0 0 22px #00000063 !important;
@@ -72,4 +73,8 @@
 .box-elevation-z8 {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
     0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+}
+.box-elevation-z4 {
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 10px 0px rgba(0, 0, 0, 0.12) !important;
 }
