--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -1,3 +1,5 @@
+@import './var.scss';
+
 //--------------------------- Main Wrapper Used in ------------------------------
 //   1.Adminpage
 //   2.Userpage
@@ -358,11 +360,11 @@
         margin-bottom: 30px;
         min-height: 100%;
         border-radius: 10px;
-        background-color: #e8eaec;
+        background-color: $lightestgrey;
         padding: 30px 30px 0px 30px;
         text-align: center;
         &:hover {
-          background-color: #fff;
+          background-color: $white;
           box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
             0 3px 14px 2px rgba(0, 0, 0, 0.12);
           transform: translateY(-4px);
