--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,9 @@
 @import 'assets/css/white-component.scss';
 @import 'assets/css/shared-common.scss';
 @import 'assets/css/pre-loader.scss';
-@import 'assets/css/variable';
+@import 'assets/css/var.scss';
+
+@import 'assets/css/white-angular-components.scss';
 
 .list-product-style {
   // overflow: hidden !important;
