--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
-<button mat-fab color="warn" *ngIf="isShow" class="c-go-top" (click)="gotoTop()">
+<button mat-fab *ngIf="isShow" class="white-scroll-btn" (click)="gotoTop()">
   <mat-icon>arrow_upward</mat-icon>
 </button>
