--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="footer" [ngStyle]="{position: position}">
+<mat-toolbar class="footer" [ngStyle]="{position: position}">
   <mat-toolbar-row>
     <span>© 2020</span>
     <span class="signature">
