--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,4 +1,8 @@
+@import '../../../assets/css/var.scss';
+
 .footer {
+  background-color: $darkblue;
+  color: $white;
   margin-top: 30px;
   font-weight: normal;
   z-index: 2;
