--- a/src/app/shared/list-products/list-products.component.html
+++ b/src/app/shared/list-products/list-products.component.html
@@ -40,10 +40,10 @@
             </div>
           </mat-card-content>
           <mat-card-actions>
-            <button mat-raised-button color="primary">
+            <button mat-raised-button class="add-to-cart-btn">
               {{"user.product.add_to_cart" | translate}}
             </button>
-            <button mat-raised-button color="warn" (click)="quickview(item)">
+            <button mat-raised-button class="quick-view-btn" (click)="quickview(item)">
               {{"user.product.quick_view" | translate}}
             </button>
           </mat-card-actions>
