--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="nav-bar">
+<mat-toolbar class="nav-bar" color="primary">
   <mat-toolbar-row>
     <button
       id="btnLeftPanel"
