--- a/src/app/shared/spinner/spinner.component.html
+++ b/src/app/shared/spinner/spinner.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="showLoader">
-  <mat-spinner id="spinner" class="spinner" color="primary" diameter="50" mode="indeterminate">
+  <mat-spinner id="spinner" class="spinner" diameter="50" mode="indeterminate">
   </mat-spinner>
 </ng-container>
