--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -26,5 +26,6 @@ $darkgray: #424242;
 $darkest: #222222;
 $lighterrblack: rgba(0, 0, 0, 0.12);
 $lighterblack: rgba(0, 0, 0, 0.87);
+$black: #000000;
 $pink: #ff4081;
 $darkpink: #e91e63;
