--- a/src/app/shared/confirm-dialog/confirm-dialog.component.scss
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.scss
@@ -1,3 +1,14 @@
-.mat-dialog-actions {
+@import '../../../assets/css/var.scss';
+
+.whiteDialogAction {
   float: right;
+
+  #btnYes {
+    color: $white;
+    background-color: $darkblue;
+  }
+  #btnNo {
+    color: $white;
+    background-color: $red;
+  }
 }
