--- a/src/app/shared/filter-input/filter-input.component.scss
+++ b/src/app/shared/filter-input/filter-input.component.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/css/var.scss';
+
 .filter-input {
   display: flex;
   justify-content: flex-end;
@@ -7,6 +9,8 @@
     width: 17.5%;
   }
   .filter-btn {
+    background-color: $darkblue;
+    color: $white;
     height: 48px;
     position: relative;
     min-width: 25px;
