--- a/src/app/shared/jumbotron/jumbotron.component.html
+++ b/src/app/shared/jumbotron/jumbotron.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary" class="jumbotronn">
+<mat-toolbar class="jumbotronn">
   <div class="jumbotron-heading">{{ Heading | translate | uppercase}}</div>
 </mat-toolbar>
