--- a/src/app/shared/quickview/quickview.component.scss
+++ b/src/app/shared/quickview/quickview.component.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/css/var.scss';
+
 .preview {
   display: -webkit-box;
   display: -webkit-flex;
@@ -77,6 +79,24 @@
   &:hover {
     transition: 500ms;
     transform: scale(1.02);
+  }
+}
+.action {
+  .add-to-cart-btn {
+    background-color: $darkblue;
+    color: $white;
+  }
+  .fav-btn {
+    background-color: $red;
+    color: $white;
+  }
+  .detail-btn {
+    background-color: $green;
+    color: $black;
+  }
+  .back-btn {
+    background-color: $yellow;
+    color: $black;
   }
 }
 .tab-content > .active {
