--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -1,3 +1,4 @@
+@import './var.scss';
 // -------------------------- Bootstrap Properties ------------------------------------
 .four-part {
   flex: 0 0 25%;
@@ -44,14 +45,15 @@
   }
 }
 //--------------------------- Scroll Button ------------------------------
-.c-go-top {
-  background-color: #f44336;
+.white-scroll-btn {
+  background-color: $red !important;
   position: fixed !important;
   cursor: pointer !important;
+  color: $white !important;
   box-shadow: 0 0 22px #00000063 !important;
-  .mat-icon {
-    margin: -15px !important;
-  }
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
 }
 
 //--------------------------- For Centre Anything ------------------------------
