--- a/src/app/features/product-management/detailview/detailview.component.html
+++ b/src/app/features/product-management/detailview/detailview.component.html
@@ -1,13 +1,13 @@
 <app-navbar [isHidden]="true"></app-navbar>
-<app-jumbotron [Heading]="'user.main_heading.your_account'"></app-jumbotron>
+<app-jumbotron [Heading]="'user.main_heading.detail_view'"></app-jumbotron>
 <mat-tab-group>
-  <mat-tab label="{{'user.form_heading.profile' | translate}}">
+  <mat-tab label="{{'user.form_heading.images' | translate}}">
     <app-image-viewer [product]="productdata.image"></app-image-viewer>
   </mat-tab>
-  <mat-tab label="{{'user.form_heading.edit_profile' | translate}}">
+  <mat-tab label="{{'user.form_heading.description' | translate}}">
     <app-description-viewer [product]="productdata"></app-description-viewer>
   </mat-tab>
-  <mat-tab label="{{'user.form_heading.to_buy_list' | translate}}">
+  <mat-tab label="{{'user.form_heading.reviews' | translate}}">
     <app-reviews-viewer></app-reviews-viewer>
   </mat-tab>
 </mat-tab-group>
