--- a/src/app/shared/description-viewer/description-viewer.component.html
+++ b/src/app/shared/description-viewer/description-viewer.component.html
@@ -1,11 +1,11 @@
 <div class="description-container">
   <mat-card class="box-elevation-z8">
-    <h2>Name : {{product.name}}</h2>
-    <h3>CurrentPrice : {{product.price}}</h3>
+    <h2>{{'shared.description_viewer.name' | translate}} : {{product.name}}</h2>
+    <h3>{{'shared.description_viewer.cuurent_price' | translate}} : {{product.price}}</h3>
     <mat-divider></mat-divider>
     <br />
     <div>
-      <h3>Product details</h3>
+      <h3>{{'shared.description_viewer.product_details' | translate}}</h3>
       <ul>
         <ng-container *ngFor="let item of product.details | keyvalue">
           <li><b>{{item.key}}</b> : {{item.value}}</li>
@@ -15,7 +15,7 @@
     <mat-divider></mat-divider>
     <br />
     <div>
-      <h3>Description</h3>
+      <h3>{{'shared.description_viewer.description' | translate}}</h3>
       <p>
         {{product.description}}
       </p>
