--- a/src/app/shared/reviews-viewer/reviews-viewer.component.html
+++ b/src/app/shared/reviews-viewer/reviews-viewer.component.html
@@ -1,3 +1,8 @@
+<app-spinner
+  [loading]="dataLoading"
+  *ngIf="dimmed"
+  style="position: absolute;top: 30%;left: 50%;z-index: 999;"
+></app-spinner>
 <div class="review-container">
   <mat-card class="box-elevation-z8">
     <mat-list>
@@ -17,22 +22,24 @@
           <mat-icon>add_circle</mat-icon>
         </button>
       </mat-form-field>
-      <ng-container *ngFor="let review of reviews">
-        <mat-list-item>
-          <mat-icon mat-list-icon>star</mat-icon>
-          <div mat-line>{{review.username}}</div>
-          <div mat-line>{{review.review}}</div>
-          <button
-            *ngIf="isUserReview(review.username)"
-            mat-icon-button
-            matSuffix
-            (click)="deletereview(review)"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-          <mat-divider></mat-divider>
-        </mat-list-item>
-      </ng-container>
+      <div [ngClass]="{dimmed: dimmed}">
+        <ng-container *ngFor="let review of reviews">
+          <mat-list-item>
+            <mat-icon mat-list-icon>star</mat-icon>
+            <div mat-line>{{review.username}}</div>
+            <div mat-line>{{review.review}}</div>
+            <button
+              *ngIf="isUserReview(review.username)"
+              mat-icon-button
+              matSuffix
+              (click)="deletereview(review)"
+            >
+              <mat-icon>delete</mat-icon>
+            </button>
+            <mat-divider></mat-divider>
+          </mat-list-item>
+        </ng-container>
+      </div>
     </mat-list>
   </mat-card>
 </div>
