--- a/src/app/shared/spinner/spinner.component.scss
+++ b/src/app/shared/spinner/spinner.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/css/var.scss';
 .spinner {
-  position: absolute;
+  position: absolute !important;
   top: 35%;
   left: 47%;
 }
