--- a/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
+++ b/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
@@ -1,7 +1,4 @@
-<app-navbar
-  (IsFullscreen)="fullscreenstatus($event)"
-  [isHidden]="true"
-></app-navbar>
+<app-navbar (IsFullscreen)="fullscreenstatus($event)" [isHidden]="true"></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.shopx_cart'"></app-jumbotron>
 <!-- <div class="container mb-4">
     <div class="row">
@@ -111,11 +108,8 @@
       </div>
     </div>
   </div> -->
-<app-spinner
-  *ngIf="dimmed"
-  style="position: absolute;z-index: 999;left: 50%; top: 50%;"
-  [loading]="dataLoading"
-></app-spinner>
+<app-spinner [loading]="dataLoading" *ngIf="dimmed" class="spinner"></app-spinner>
+
 <div class="table-wrapper" [ngClass]="{dimmed: dimmed}">
   <mat-table
     [ngStyle]="{'max-height': height+'px'}"
