--- a/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
+++ b/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
@@ -183,7 +183,7 @@
         <button
           mat-raised-button
           color="primary"
-          matTooltip="quickview"
+          matTooltip="{{'tooltip.quick_view' | translate}}"
           matTooltipPosition="right"
           [matTooltipShowDelay]="500"
           (click)="quickview(element)"
