--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -47,7 +47,7 @@
           />
           <button
             mat-icon-button
-            matTooltip="{{hide ? 'show' : 'hide'}}"
+            matTooltip="{{hide ? ('tooltip.show' | translate) : ('tooltip.hide'  |translate) }}"
             matTooltipPosition="left"
             matSuffix
             matSuffix
