--- a/src/app/shared/filter-input/filter-input.component.html
+++ b/src/app/shared/filter-input/filter-input.component.html
@@ -5,7 +5,14 @@
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
   &nbsp;&nbsp;
-  <button [matMenuTriggerFor]="filtermenu" mat-flat-button class="filter-btn">
+  <button
+    matTooltip="{{'tooltip.filter' | translate}}"
+    [matTooltipShowDelay]="300"
+    matTooltipPosition="above"
+    [matMenuTriggerFor]="filtermenu"
+    mat-flat-button
+    class="filter-btn"
+  >
     <mat-icon>filter_list</mat-icon>
   </button>
   <mat-menu #filtermenu="matMenu" xPosition="before">
