--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -108,7 +108,7 @@
             />
             <button
               mat-icon-button
-              matTooltip="{{hide ? 'show' : 'hide'}}"
+              matTooltip="{{hide ? ('tooltip.show' | translate) : ('tooltip.hide'  |translate) }}"
               matTooltipPosition="left"
               matSuffix
               matSuffix
