--- a/src/app/shared/confirm-dialog/confirm-dialog.component.scss
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.scss
@@ -3,11 +3,11 @@
 .whiteDialogAction {
   float: right;
 
-  #btnYes {
+  .btnYes {
     color: $white;
     background-color: $darkblue;
   }
-  #btnNo {
+  .btnNo {
     color: $white;
     background-color: $red;
   }
