--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -3,10 +3,10 @@
   <p id="pMessage">{{ data.message | translate }}</p>
 </div>
 <div class="whiteDialogAction" mat-dialog-actions>
-  <button id="btnYes" mat-flat-button mat-dialog-close="yes" cdkFocusInitial>
+  <button class="btnYes" mat-flat-button mat-dialog-close="yes" cdkFocusInitial>
     {{"confirm.yes" | translate}}
   </button>
-  <button id="btnNo" mat-flat-button mat-dialog-close="no">
+  <button class="btnNo" mat-flat-button mat-dialog-close="no">
     {{"confirm.no" | translate}}
   </button>
 </div>
